# platform-service-accounts-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  secret.yaml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  release-image.yml  release.yml  setup-automerge.yml  stale.yml  test.yaml  update-pre-commit.yml
alembic/: env.py
alembic/versions/: 318f4b078ac9_create_service_account_table.py  3e574195b9e1_allow_null_name.py
charts/platform-service-accounts/: Chart.yaml  values-dev.yaml  values-mts.yaml  values-staging.yaml  values.yaml
charts/platform-service-accounts/templates/: _helpers.tpl  deployment.yaml  externalSecret.yaml  ingress.yaml  ping-middleware.yaml  secrets.yml  service.yaml
deploy/platformserviceaccountsapi/: Chart.yaml  values-dev.yaml  values-mts.yaml  values-staging.yaml  values-template.yaml
deploy/platformserviceaccountsapi/templates/: deployment.yaml  ingress.yaml  secrets.yml
platform_service_accounts_api/: api.py  auth_client.py  config.py  config_factory.py  identity.py  postgres.py  schema.py  service.py  utils.py
platform_service_accounts_api/storage/: base.py  in_memory.py  postgres.py
requirements/: syntax.txt  test.txt
tests/integration/: auth.py  conftest.py  docker.py  postgres.py  test_api.py  test_postgres.py  test_postgres_storage.py  test_service.py
tests/unit/: test_config.py  test_in_memory_storage.py  test_service.py
