[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "platform-service-accounts-api"
version = "0.0.0"
description = "Apolo.us service-accounts service"
readme = "README.md"
license = "Apache 2"
authors = ["Apolo.us <team@apolo.us>"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
]
packages = [{ include = "platform_service_accounts_api" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
aiohttp = { version = "3.12.11", extras = ["speedups"] }
neuro-auth-client = "25.5.1"
neuro-logging = "25.1.0"
aiohttp-cors = "0.8.0"
marshmallow = "3.20.1"
aiohttp-swagger3 = "0.10.0"
markupsafe = "3.0.2"
alembic = "1.14.1"
psycopg2-binary = "2.9.10"
asyncpgsa = "0.27.1"
sqlalchemy = "~1.3.0"
yarl = "1.20.0"

[tool.poetry.scripts]
platform-service-accounts-api = "platform_service_accounts_api.api:main"

[tool.poetry.group.dev.dependencies]
docker = "7.1.0"
mypy = "1.16.0"
pre-commit = "4.2.0"
pytest = "8.3.5"
pytest-aiohttp = "1.1.0"
pytest-asyncio = "0.26.0"
pytest-cov = "6.1.1"
ruff = "0.11.13"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "F", "I", "C90", "UP", "B", "ASYNC", "N", "FBT", "A", "C4", "EM", "FA", "ICN",
    "G", "PIE", "PYI", "PT", "RET", "PTH"
]
ignore = [
    "A001",
    "A002",
    "A003",
    "N818",
    "PT006",
    "PT011",
    "EM101",
    "EM102",
    "B008",
    "RET503",
    "PT012",
    "FBT001",
    "FBT002",
    "B904"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:jose",
    "ignore::DeprecationWarning:.*",
    "ignore::marshmallow.warnings.RemovedInMarshmallow4Warning:apispec.ext.marshmallow.field_converter",
    "ignore::aiohttp.web_exceptions.NotAppKeyWarning:aiohttp_swagger3",
    "ignore::aiohttp.web_exceptions.NotAppKeyWarning:aiohttp_security"
]

[tool.coverage.run]
branch = true
source = ["platform_service_accounts_api"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "aiohttp_security.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "neuro_auth_client.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jose.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asyncpgsa"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiohttp_cors"
ignore_missing_imports = true
