[metadata]
name = platform-service-accounts-api
description = Neu.ro service-accounts service
url = https://github.com/neuro-inc/platform-service-accounts-api
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.9
include_package_data = True
packages = find:
install_requires =
    aiohttp==3.7.4.post0
    neuro-auth-client==21.10.1
    neuro-logging==21.10.2
    aiohttp-cors==0.7.0
    marshmallow==3.12.2
    aiohttp-apispec==2.2.1
    alembic==1.7.4
    psycopg2-binary==2.9.1
    asyncpgsa==0.27.1
    sqlalchemy~=1.3.0

[options.entry_points]
console_scripts =
    platform-service-accounts-api = platform_service_accounts_api.api:main

[flake8]
max-line-length = 88
exclude =
    .git
    venv
    __pycache__

[isort]
line_length=88
include_trailing_comma=True
multi_line_output=3
force_grid_wrap=0
combine_as_imports=True
lines_after_imports=2
known_first_party=platform_service_accounts_api,tests
default_section=THIRDPARTY

[tool:pytest]
testpaths = tests
filterwarnings=
    error
    ignore::DeprecationWarning:jose

[coverage:run]
branch = True
source = platform_service_accounts_api

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-aiohttp_security]
ignore_missing_imports = true

[mypy-aiohttp_security.api]
ignore_missing_imports = true

[mypy-jose]
ignore_missing_imports = true

[mypy-neuro_auth_client.*]
ignore_missing_imports = true

[mypy-pytest]
ignore_missing_imports = true

[mypy-setuptools]
ignore_missing_imports = true

[mypy-trafaret]
ignore_missing_imports = true

[mypy-aiohttp_cors]
ignore_missing_imports = true

[mypy-aiohttp_apispec]
ignore_missing_imports = true

[mypy-docker.*]
ignore_missing_imports = true

[mypy-alembic.*]
ignore_missing_imports = true

[mypy-asyncpg.*]
ignore_missing_imports = true

[mypy-asyncpgsa]
ignore_missing_imports = true

[mypy-sqlalchemy.*]
ignore_missing_imports = true
