[metadata]
name = platform-service-accounts-api
description = Neu.ro service-accounts service
url = https://github.com/neuro-inc/platform-service-accounts-api
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.9
include_package_data = True
packages = find:
install_requires =
    aiohttp==3.8.1
    neuro-auth-client==22.6.1
    neuro-logging==21.12.2
    aiohttp-cors==0.7.0
    marshmallow==3.17.1
    aiohttp-apispec==2.2.3
    markupsafe==2.1.1
    alembic==1.9.3
    psycopg2-binary==2.9.3
    asyncpgsa==0.27.1
    sqlalchemy~=1.3.0

[options.entry_points]
console_scripts =
    platform-service-accounts-api = platform_service_accounts_api.api:main

[flake8]
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203,F541

[tool:pytest]
testpaths = tests
asyncio_mode = auto
filterwarnings=
    error
    ignore::DeprecationWarning:jose
    ignore::marshmallow.warnings.RemovedInMarshmallow4Warning:apispec.ext.marshmallow.field_converter

[coverage:run]
branch = True
source = platform_service_accounts_api

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-aiohttp_security]
ignore_missing_imports = true

[mypy-aiohttp_security.api]
ignore_missing_imports = true

[mypy-jose]
ignore_missing_imports = true

[mypy-neuro_auth_client.*]
ignore_missing_imports = true

[mypy-pytest]
ignore_missing_imports = true

[mypy-setuptools]
ignore_missing_imports = true

[mypy-trafaret]
ignore_missing_imports = true

[mypy-aiohttp_cors]
ignore_missing_imports = true

[mypy-aiohttp_apispec]
ignore_missing_imports = true

[mypy-docker.*]
ignore_missing_imports = true

[mypy-alembic.*]
ignore_missing_imports = true

[mypy-asyncpg.*]
ignore_missing_imports = true

[mypy-asyncpgsa]
ignore_missing_imports = true

[mypy-sqlalchemy.*]
ignore_missing_imports = true
