[metadata]
name = platform-service-accounts-api
description = Neu.ro service-accounts service
url = https://github.com/neuro-inc/platform-service-accounts-api
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.11
include_package_data = True
packages = find:
install_requires =
    aiohttp==3.8.5
    neuro-auth-client==24.8.0
    neuro-logging==21.12.2
    aiohttp-cors==0.8.1
    marshmallow==3.20.1
    aiohttp-apispec==2.2.3
    markupsafe==3.0.2
    alembic==1.12.0
    psycopg2-binary==2.9.10
    asyncpgsa==0.27.1
    sqlalchemy~=1.3.0
    yarl==1.12.1

[options.entry_points]
console_scripts =
    platform-service-accounts-api = platform_service_accounts_api.api:main

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "C90", "UP", "B", "ASYNC", "N", "FBT", "A", "C4", "EM", "FA", "ICN",
         "G", "PIE", "PYI", "PT", "RET", "PTH"]
ignore = ["A003", "N818", "PT006", "PT011", "EM101", "B008", "RET503", "PT012", "FBT001", "FBT002", "B904"]
fix = true
target-version = "py311"

[tool:pytest]
testpaths = tests
asyncio_mode = auto
filterwarnings=
    error
    ignore::DeprecationWarning:jose
    ignore::marshmallow.warnings.RemovedInMarshmallow4Warning:apispec.ext.marshmallow.field_converter
    ignore:distutils Version classes are deprecated. Use packaging.version instead:DeprecationWarning

[coverage:run]
branch = True
source = platform_service_accounts_api

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-aiohttp_security]
ignore_missing_imports = true

[mypy-aiohttp_security.api]
ignore_missing_imports = true

[mypy-jose]
ignore_missing_imports = true

[mypy-neuro_auth_client.*]
ignore_missing_imports = true

[mypy-pytest]
ignore_missing_imports = true

[mypy-setuptools]
ignore_missing_imports = true

[mypy-trafaret]
ignore_missing_imports = true

[mypy-aiohttp_cors]
ignore_missing_imports = true

[mypy-aiohttp_apispec]
ignore_missing_imports = true

[mypy-docker.*]
ignore_missing_imports = true

[mypy-alembic.*]
ignore_missing_imports = true

[mypy-asyncpg.*]
ignore_missing_imports = true

[mypy-asyncpgsa]
ignore_missing_imports = true

[mypy-sqlalchemy.*]
ignore_missing_imports = true
